Add Vercel Insights script for performance monitoring

--- a/public/index.html
+++ b/public/index.html
@@ -96,6 +96,7 @@
   </script>
 
   <script src="script.js"></script>
+  <script defer src="/_vercel/insights/script.js"></script>
 </body>
 
 </html>
