--- a/public/index.html
+++ b/public/index.html
@@ -97,6 +97,7 @@
 
   <script src="script.js"></script>
   <script defer src="/_vercel/insights/script.js"></script>
+  <script defer src="/_vercel/speed-insights/script.js"></script>
 </body>
 
 </html>
